# ai4prod_ui

./: .gitignore  .gitmodules  README.md
example/Cpp_native/: CMakeLists.txt  Readme.md  main.cpp  vcpkg.json
example/Python_Cpp_Example/: CMakeLists.txt  README.md  setup.py
example/Python_Web_Cpp_Example/: test_cv.py
example/Python_Web_Cpp_Example/src/: main.cpp
web_ui/: checkImportForTraining.py  requirements.txt  requirements_windows_manual.txt
web_ui/docker/: Dockerfile  Readme.md  docker-composeBase.yaml  docker-composeDev.yaml  docker-composeProd.yaml
web_ui/docker/Installer/: Readme.md
web_ui/docker/dockerfiles/: DockerfileBaseImage  DockerfileProd
web_ui/docker/script/: release.sh
web_ui/web_app/: gui_cfg.yaml  production.py  run_app.py  run_app.spec
web_ui/web_app/app/: __init__.py
web_ui/web_app/app/conf/: conf_handler.py
web_ui/web_app/app/data/: data.py  dataset.py  datastet.py
web_ui/web_app/app/db/: database_instance.py  mlflow_shema.py
web_ui/web_app/app/home/: __init__.py  event_interface.py  utils.py  views.py  views_dataset.py  views_deploy.py  views_optimization.py  views_training.py
web_ui/web_app/app/static/conf/: camera.yaml  config.yaml
web_ui/web_app/app/static/css/: style.css
web_ui/web_app/app/static/dataset/: test.csv
web_ui/web_app/app/static/js/: index.js
web_ui/web_app/app/templates/: base.html
web_ui/web_app/app/templates/page/component/: nav_bar.html
web_ui/web_app/app/templates/page/home/: configuration.html  dataset.html  dataset_statistics.html  deploy.html  optimization.html  training.html  training_metrics.html
web_ui/web_app/app/templates/page/turbo_component/: dataset_change.html  epoch_counter.html  loss_chart.html
web_ui/web_app/app/turbo_wrapper/: turbo_wrapper.py  turbo_wrapper_call.py
